# flux

./: .gitignore  .prettierignore  README.md  components.json  convert.js  help.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  refactor-imports.js  skills-lock.json  tsconfig.json  vite.config.ts
.agents/agents/: ca-react-refactorer.md  ca-react-reviewer.md  codebase-ddd-refactor.md  codebase-design-refactor.md  ddd-refactor.md  ddd-reviewer.md  design-reviewer.md  react-test-coverage-gap.md  react-test-fixer.md  react-test-refactor.md
.agents/commands/: acp.md  ca-react-refactor.md  ca-react-review.md  characterization-test.md  codebase-ca-react-refactor.md  codebase-ca-react-review.md  codebase-ddd-refactor.md  codebase-ddd-review.md  codebase-design-refactor.md  codebase-design-review.md  ddd-refactor.md  ddd-review.md  design-refactor.md  design-review.md  pr.md  react-test-coverage.md  react-test-fix.md  react-test-refactor.md  react-test-write.md
.github/workflows/: release.yml
releases/: latest.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  state.rs
src-tauri/src/commands/: execution.rs  mod.rs  whatsapp.rs  window.rs  workflow.rs
src-tauri/src/engine/: context.rs  executor.rs  scheduler.rs
src-tauri/src/models/: execution.rs  mod.rs  workflow.rs
src-tauri/src/services/: http_client.rs  mod.rs  whatsapp_client.rs
src-tauri/src/steps/: data_transform.rs  http_request.rs  mod.rs  whatsapp.rs
(+145 files in other folders)
